# annuity-pricing

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  CURRENT_WORK.md  METHODOLOGY.md  Makefile  README.md  ROADMAP.md  codex_comprehensive_todo.md  codex_plan_audit_purrfect-wondering-rabin.md  codex_pypi_readiness_report.md  codex_repo_audit.md  codex_repo_audit_2025-12-05.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yml  docs.yml  notebooks.yml  publish.yml
archive/: codex_repo_review.md
archive/roadmaps/: CURRENT_WORK_v1.0_2025-12-06.md  ROADMAP_v1.0_phases-0-10_2025-12-06.md
data/raw/: CHECKSUMS.sha256
docs/: CROSS_VALIDATION_MATRIX.md  conf.py  glossary.rst  index.md  requirements.txt  testing_strategy.md
docs/analysis/: ecosystem_opportunities.md  temporalcv_gap_analysis.md
docs/api/: products.md
docs/future_work/: data_integration_ideas.md
docs/guides/: behavior_calibration.md  getting_started.md  glwb_walkthrough.md  installation.md  market_setup.md  pricing_fia.md  pricing_myga.md  pricing_rila.md  regulatory_vm21_vm22.md
docs/knowledge/: README.md
docs/model_cards/: TEMPLATE.md  fia.md  fia_pricer.md  glwb.md  glwb_simulator.md  index.md  myga.md  rila.md  rila_pricer.md
docs/reference/: changelog.md  contributing.md
docs/references/: acquisition_list_extended.md  acquisition_list_glwb_va.md
docs/validation/: cross_validation.md  golden_cases.md  validation_evidence.md
examples/: 01_fair_rates.py
notebooks/: 02_competitive_analysis.ipynb  03_fia_rila_pricing_demo.ipynb
notebooks/validation/: _TEMPLATE.ipynb  pv_correction_derivation.ipynb
paper/: .gitignore  README.md  main.tex  references.bib  zenodo.json
paper/artifacts/: requirements-paper.txt
paper/styles/: quantfin.cls
references/: README.md
scripts/: fetch_market_data.py  generate_payoff_truth_tables.py  r_actuarial.sh  run_notebooks.sh  setup_check.py  validate.sh
scripts/figures/: __init__.py  plot_bs_parity.py  plot_glwb_fee_surface.py  plot_mc_convergence.py  plot_rila_fia_payoffs.py  plot_vm21_cte_sensitivity.py
src/annuity_pricing/: __init__.py
tests/: conftest.py
tests/anti_patterns/: test_arbitrage_bounds.py  test_buffer_mechanics.py  test_buffer_vs_floor.py  test_floor_enforcement.py  test_put_call_parity.py  test_spread_rate_halt.py  test_vectorized_consistency.py
tests/chaos/: test_chaos_scenarios.py
tests/fixtures/: CHECKSUMS.sha256  __init__.py  treasury_yields_2024_01_15.csv  (+1 more)
wink-research-archive/: README.md
(+200 files in other folders)
